--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/standalone.css">
+    <link rel="stylesheet" href="css/main.css">
     <title></title>
 </head>
 <body>
-   
+    
 </body>
 </html>
